@@ -60,6 +60,11 @@ typedef GPtrArray * (*GabblePluginCreateChannelManagersImpl) (
     GabblePlugin *plugin,
     TpBaseConnection *connection);
 
+typedef GabbleSidecar * (*GabblePluginCreateSidecarFinishImpl) (
+     GabblePlugin *plugin,
+     GAsyncResult *result,
+     GError **error);
+
 struct _GabblePluginPrivacyListMap {
     const gchar *presence_status_name;
     const gchar *privacy_list_name;
@@ -81,9 +86,14 @@ struct _GabblePluginInterface {
     const gchar * const *sidecar_interfaces;
 
     /**
-     * An implementation of gabble_plugin_create_sidecar().
+     * An implementation of gabble_plugin_create_sidecar_async().
      */
-    GabblePluginCreateSidecarImpl create_sidecar;
+    GabblePluginCreateSidecarImpl create_sidecar_async;
+
+    /**
+     * An implementation of gabble_plugin_create_sidecar_finish().
+     */
+    GabblePluginCreateSidecarFinishImpl create_sidecar_finish;
 
     /**
      * The plugin's version, conventionally a "."-separated sequence of
@@ -120,7 +130,7 @@ gboolean gabble_plugin_implements_sidecar (
     GabblePlugin *plugin,
     const gchar *sidecar_interface);
 
-void gabble_plugin_create_sidecar (
+void gabble_plugin_create_sidecar_async (
     GabblePlugin *plugin,
     const gchar *sidecar_interface,
     GabbleConnection *connection,
